## (at your option) any later version.
##
## stage0 is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with stage0.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added

** Changed

** Fixed

** Removed

* 0.2 - 2017-07-19
** Added
Added number?
Added string-append
Added Get-index
Added map
Added filter
Added length
Added string-length
Added eq?
Added fold-left
Added symbol?
Exported apply functionality

** Changed
Changed reverse to not depend on alternate functions

** Fixed

** Removed
Removed reving as it is only needed inside of reverse

* 0.1 - 2017-07-01
** Added
Added inital changelog
Added version message
Added Help message
Added support for multiple definition files
Added Test0 to demonstrate support for quote
Added Test1 to demonstrate support for list, cons, car, cdr, null? and cond
Added test target to make
Added support for raw strings
Added recursive support to integer->char
Added char->integer
Added string->list
Added char?
Added string?
Added list->string
Added initial lisp ascension library
Extending lisp ascension library with reverse, fold-right and a couple char functions
Added cell list reversing primitive

** Changed
Makefile is modified to follow bin standard
Renamed resulting binary to slow_lisp to prevent namespace conflicts in bin
Enhanced basic tests
Converted ASCII type to CHAR
Converted ASCII! to integer->char
Made integer->char match guile

** Fixed
makefile now does proper cleanup
Harmonized max_string size that doesn't hit glibc malloc bug

** Removed
Removed C warning about unused args in prim_halt
Removed need for append cell

* 0.0 - 2017-07-01
** Added
Inital important of Stage0 lisp, high level prototype

** Changed

** Fixed

** Removed